// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BinaryPagination should render empty 1`] = `
<div
  className="BinaryPagination__PaginationContainerSty-sc-1j8x01y-0 cUJyHY"
>
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 kQHAns"
  />
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 flucJZ"
  />
</div>
`;

exports[`BinaryPagination should render with data 1`] = `
<div
  className="BinaryPagination__PaginationContainerSty-sc-1j8x01y-0 cUJyHY"
>
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 kQHAns"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          ← 
          Prev title
        </div>
      </li>
    </ul>
  </div>
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 flucJZ"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          Next title
           →
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BinaryPagination should use slug if title not provided 1`] = `
<div
  className="BinaryPagination__PaginationContainerSty-sc-1j8x01y-0 cUJyHY"
>
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 kQHAns"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          ← 
          /prev
        </div>
      </li>
    </ul>
  </div>
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 flucJZ"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          /next
           →
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BinaryPagination shouldn't render without slug 1`] = `
<div
  className="BinaryPagination__PaginationContainerSty-sc-1j8x01y-0 cUJyHY"
>
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 kQHAns"
  />
  <div
    className="BinaryPagination__PaginationItemSty-sc-1j8x01y-1 flucJZ"
  />
</div>
`;
